@@ -14,5 +14,5 @@ noinst_LTLIBRARIES = libenumerate.la
 
 libenumerate_la_SOURCES =
 
-enumerateinclude_HEADERS =
+enumerateinclude_HEADERS = ncompconstraint.h ncompconstraint.tcc
 
